# TempRV

./: NL_requirement.txt  README.md
code/TA_RV_Predictor/: CMakeLists.txt
code/TA_RV_Predictor/benchmark/: engine-classic-uppaal5.xml  gear-control-properties.xml
code/TA_RV_Predictor/input/: TARV.xml  bash.sh  input_trace.txt
code/TA_RV_Predictor/src/monitaal/: CMakeLists.txt  Parser.h  TA.h  state.cpp  types.h
code/TA_RV_Predictor/src/monitaal-bin/: CMakeLists.txt  main.cpp
code/TA_RV_Predictor/src/pardibaal/src/pardibaal/: Federation.cpp
code/TA_RV_Predictor/test/: CMakeLists.txt
code/TA_RV_Predictor/test/models/: absentAQ.xml  absentBQR.xml  absentBR.xml  b_or_c.xml  c_after_10.xml  delay-example.xml  f(g(notb)_and_g(f(a)).xml  never_b.xml  recurBQR.xml  recurGLB.xml  time-must-pass.xml
code/TA_RV_Predictor/tmp_code/: FSM.xml  Pre_model.py  a-b30.xml  create_xml.py  input.txt  input_data.txt  input_tmp.txt  model_path  my_code.py  test_data.txt  tmp.py
code/nl2spec-main/: Example_DSapi.py  Readme.md  examples.csv
code/nl2spec-main/datasets/: expert_LTL_dataset.txt
code/nl2spec-main/experiments/: codex-initial_predictions.txt  gpt-3.5-turbo-interactive_predictions.txt  nl2spec-paper_experiment_results.csv
code/nl2spec-main/input/: ltl.txt  mitl.txt
code/nl2spec-main/input/TDLRV/: J.txt  rawmessage.txt  test1.tdl
code/nl2spec-main/input/keyfile/: key.txt
code/nl2spec-main/input/prompts/: LTL.txt  MITL.txt  amba_slave_guarantees.txt  minimal.txt
code/nl2spec-main/input/rawmessage/: J102.txt  J120.txt  J150.txt  J22.txt  J2820.txt  J31.txt  J70.txt
code/nl2spec-main/output/: ba copy.xml  ba.xml  trace copy.txt  trace.txt
code/nl2spec-main/src/: TARV_main.py  backend.py  bash.sh  frontend.py  generate_tdl.py  ltl2ba.py  mitl2ba.py  models.py  nl2ltl.py  prompting.py  tarv.py  tdlrv.py
code/nl2spec-main/templates/: home.html
